- Add bridge/carp interface support.
- Add ZFS sparse volume support.
- Add GPT UUID to mount point.
- Add a warning for changing of the disk in config.
- Add force flag to ZFS pool creation.
- Add random SCSI serial when creating iSCSI target.
- Add auto IPv6 fot WebGUI.
- Add AES-CBC at disk encryption.
- Add TCP wrapper check in FTP service.
- Wait response of LAN interface if static with gateway.
- Run umount before iSCSI initiator shutdown.
- Remount all after netif is up for iSCSI device.
- Clear notify after execute now of rsync client/local.
- Increase the number of config backup to 6.
- Confirm permission on temporary directory.
- Check DNS if firmware check/required service is enabled.
- Remove existing cache and notify at boot.
- Change default AIO size to 4096.
- Change kern.maxfilesperproc to 50000.
- Change default atime of ZFS dataset is on.
- Change minimum UID/GID is 1000.
- Change bind WebGUI to LAN only.
- Change default ZFS arc size.
- Change LDAP host to URIs.
- Update SSL certificate and privatekey.
- Add iscsi default values to default config.
- Remove unused hw.ata.to from sysctl.
- Remove AIO disable at boot.
- Add 60days lifetime on ZFS auto snapshot.
- Add ata chipset patch. (VT6420/VT6421)
- Add amdtemp patch.
- Add VM timer workaround.
- Add useful PHP modules.
- Add php wrapper for webserver.
- Add sockstat to Diagnostics|Information|Sockets.
- Add missing NUT drivers.
- Add firefly pacth.
- Use SCSI inquiry for model and serial.
- Upgrade istgt to 20121123.
- Upgrade isboot to 0.2.6.
- Upgrade e2fsprogs to 1.42.6.
- Upgrade to FreeBSD 9.1-RC3.
- Upgrade msmtp to 1.4.29.
- Upgrade xmlstarlet to 1.4.0.
- Upgrade smartmontools to 6.0.
- Upgrade php to 5.4.8.
- Upgrade transmission to 2.73.
- Upgrade samba to 3.6.9.
- Upgrade bash to 4.2 p39.
- Upgrade zoneinfo to 2012j.
- Upgrade unison to 2.40.102.
- Upgrade lcdproc to 0.5.6.
- Upgrade lighttpd to 1.4.32.

Bug fixes:

- Set default timezone.
- Fix broken modifications.